# ebook-reader

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md  eslint.config.js  findings.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  task_plan.md
.github/workflows/: v0.2-rc-artifacts.yml
apps/desktop/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.msi.conf.json  tauri.updater-test.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_unique_books_file_hash.sql  0003_reader_experience.sql  0004_backup_portability.sql  0005_book_user_metadata.sql  0006_book_derivatives.sql  0007_custom_fonts.sql  0008_library_search.sql
apps/desktop/src-tauri/src/: backup.rs  batch_import.rs  db.rs  file_open.rs  fonts.rs  lib.rs  library_search.rs  main.rs  mobi.rs  updater.rs
apps/desktop/src-tauri/tests/fixtures/libmobi/: README.md
apps/desktop/src-tauri/updater/: FINGERPRINT.sha256  ebook-reader-updater.pub
docs/: backup-and-restore.md  custom-fonts.md  library-search.md  privacy-and-data.md  release-security.md  updates.md  upgrade-and-rollback.md  v0.2-roadmap.md
docs/architecture/: mobi-azw3-engine-evaluation.md  mobi-conversion-spike.md
scripts/: build-windows-flavor.mjs  verify-release.mjs
scripts/release/: audit-licenses.mjs  build-release.ps1  (+2 more)
(+119 files in other folders)
