[package]
name = "ebook-reader-desktop"
version = "0.0.0"
description = "Local-first desktop ebook reader"
authors = ["ebook-reader contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ebook_reader_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
sha2 = "0.10.9"
hex = "0.4.3"
uuid = { version = "1.23.3", features = ["v4"] }
encoding_rs = "0.8.35"
chardetng = "1.0.0"
regex = "1.12.4"

[dev-dependencies]
tempfile = "3.27.0"
